--- a/golang/06-系统调用/系统调用.md
+++ b/golang/06-系统调用/系统调用.md
@@ -18,5 +18,44 @@ func RawSyscall(trap, a1, a2, a3 uintptr) (r1, r2 uintptr, err syscall.Errno)
 func RawSyscall6(trap, a1, a2, a3, a4, a5, a6 uintptr) (r1, r2 uintptr, err syscall.Errno)
 ```
 
-由于RawSyscall相较与Syscall缺少了runtime.entersyscall(SB)以及runtime.exitssyscall(SB)的调用，当g执行阻塞性质的系统调用时，当前g会维持running状态，runtime系统监控在进行全局调度的时候一旦发现运行超过10ms的g就会执行抢占操作，通过发送信号量给g对应的线程，而由于线程在初始化的时候进行了信号量的监听以及设置了响应的sa_flags参数，虽然包含诸如SA_RESTART参数会让系统调用在信号中断后自动恢复，但是不是所有系统调用都会有效，这将会导致在收到信号量的时候对正在阻塞的系统调用产生中断，这种行为往往会给使用者带来意料之外的情况
+由于RawSyscall相较与Syscall缺少了runtime.entersyscall(SB)以及runtime.exitsyscall(SB)的调用，当g执行阻塞性质的系统调用时，当前g会维持running状态，runtime系统监控在进行全局调度的时候一旦发现运行超过10ms的g就会执行抢占操作，通过发送信号量给g对应的线程，而由于线程在初始化的时候进行了信号量的监听以及设置了响应的sa_flags参数，虽然包含诸如SA_RESTART参数会让系统调用在信号中断后自动恢复，但是不是所有系统调用都会有效，这将会导致在收到信号量的时候对正在阻塞的系统调用产生中断，这种行为往往会给使用者带来意料之外的情况
 
+##### vdso
+
+可以认为是一种特殊的系统调用，在使用时没有用户态到内核态的切换。
+
+用来执行特定的系统调用时，减少系统调用的开销。某些系统调用并不需要向内核提交参数，而仅仅只是从内核里请求读取某个数据，例如gettimeofday()，内核在处理这部分系统调用时可以吧系统当前时间谢谢爱一个固定的位置(由内核在某个时间中断里去完成这个更新动作)，mmap映射到用户空间，这样会更快速，避免了传统系统调用模式INT 0x80/SYSCALL造成的内核空间和用户空间的上下文切换。
+
+##### 系统调用管理
+
+系统调用的定义文件：syscall/syscall_linux.go
+
+可以把系统调用分为三类：
+
+1. 阻塞系统调用
+
+```go
+//sys   Madvise(b []byte, advice int) (err error)
+```
+
+2. 非阻塞系统调用
+
+```go
+//sysnb    EpollCreate(size int) (fd int, err error)
+```
+
+3. wrapped系统调用
+
+runtime中还有一些系统调用，是不暴露给用户的。代码在：runtime/sys_linux_amd64.s中
+
+和调度器的交互
+
+entersyscall：进入系统调用，进入syscall的G不会被将占
+
+exitsyscall：退出系统调用。
+
+exitsyscallfast：努力获取一个P来执行syscall逻辑，如果哪都没有P可以用，就进入exitsyscall0了
+
+exitsyscall0：调用exitsyscall0会切换到g0栈。
+
+entersyscallblock：知道自己会block，直接就把P交出来了
