--- a/golang/07-并发编程最佳实践/并发编程最佳实践.md
+++ b/golang/07-并发编程最佳实践/并发编程最佳实践.md
@@ -26,6 +26,7 @@ func (o *Once) doSlow(f funcc()) {
 
 * 初始化方法必须且只能被调用一次
 * Do返回后，初始化一定已经执行完成
+* 即使f panic了，Once也认为它完成了
 
 ###### sync.Pool：
 
@@ -198,7 +199,9 @@ state的最后三位特殊标示：
 * 倒数第二位为已有被唤醒的等待锁的G
 * 倒数第三位为是否为饥饿模式
 
-饥饿模式：
+饥饿模式：锁的所有权将从unlock的goroutine直接交给等待队列中的第一个，新来的goroutine将不会尝试取获取锁，即使锁看起来是unlock状态，也不会去尝试自旋操作，而是放在等待队列的尾部。如果一个等待的goroutine获取了锁，并且满足以下条件中的一个，它会将锁的状态转换为正常状态：1、它是队列中的最后一个，2、它等待的时候小于1ms。
+
+正常模式：所有等待锁的goroutine按照FIFO顺序等待。唤醒的goroutine不会直接拥有锁，而是会和新请求锁的goroutine竞争锁的拥有，如果一个等待的goroutine超过1ms没有获取锁，那么它会把锁转变为饥饿模式。
 
 ###### sync.RWMutex
 
@@ -212,5 +215,15 @@ type RWMutex struct {
 }
 ```
 
+* 可以被一堆的reader持有，或者被一个writer持有
+* 适合大并发read的场景
+* writer的Lock相对后续的reader的RLock优先级高
+* 禁止递归读锁
 
+###### sync.Waitgroup
+
+* 等待一组goroutine完成
+* Add参数可以是负值，如果计数器小于0会panic
+* 当计数器为0的时候，阻塞在Wait方法的goroutine都会被释放
+* Add一定要在Wait之前设置好
 
