--- a/refactoring/06/第一组重构.md
+++ b/refactoring/06/第一组重构.md
@@ -1312,5 +1312,109 @@ function price(order, priceList) {
 
 5. 范例
 
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+	const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+	const shippingPerCase = (basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = quantity * shippingPerCase;
+	const price = basePrice - discount + shippingCost;
+	return price;
+}
+```
+
+提炼函数，把计算配送成本恩的逻辑提炼出来：
+
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+	const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+	const price = applyShipping(basePrice, shippingMethod, quantity, discount);
+	return price;
+}
+function applyShipping(basePrice, shippingMethod, quantity, discount) {
+    const shippingPerCase = (basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = quantity * shippingPerCase;
+	const price = basePrice - discount + shippingCost;
+	return price;
+}
+```
+
+引入中转数据结构：
+
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+	const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+    const priceData = {};
+	const price = applyShipping(priceData, basePrice, shippingMethod, quantity, discount);
+	return price;
+}
+function applyShipping(priceData, basePrice, shippingMethod, quantity, discount) {
+    const shippingPerCase = (basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = quantity * shippingPerCase;
+	const price = basePrice - discount + shippingCost;
+	return price;
+}
+```
+
+逐一将第一阶段使用的参数移入中转数据结构，并从参数列表去除
+
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+	const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+    const priceData = {basePrice: basePrice，quantity： quantity， discount: discount};
+	const price = applyShipping(priceData, shippingMethod);
+	return price;
+}
+function applyShipping(priceData, shippingMethod) {
+    const shippingPerCase = (priceData.basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = priceData.quantity * shippingPerCase;
+	const price = priceData.basePrice - priceData.discount + shippingCost;
+	return price;
+}
+```
+
+将第一阶段提炼成函数：
+
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+    const priceData = calculatePricingData(product, quantity);
+	const price = applyShipping(priceData, shippingMethod);
+	return price;
+}
+function calculatePricingData(product, quantity) {
+    const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+   return {basePrice: basePrice，quantity： quantity， discount: discount};
+}
+function applyShipping(priceData, shippingMethod) {
+    const shippingPerCase = (priceData.basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = priceData.quantity * shippingPerCase;
+	const price = priceData.basePrice - priceData.discount + shippingCost;
+	return price;
+}
+```
+
+内联变量：
+
+```javascript
+function priceOrder(product, quantity, shippingMethod) {
+    const priceData = calculatePricingData(product, quantity);
+	return applyShipping(priceData, shippingMethod);
+}
+function calculatePricingData(product, quantity) {
+    const basePrice = product.basePrice * quantity;
+	const discount = Math.max(quantity - product.discountThreshold, 0) * product.basePrice * product.discountRate;
+   return {basePrice: basePrice，quantity： quantity， discount: discount};
+}
+function applyShipping(priceData, shippingMethod) {
+    const shippingPerCase = (priceData.basePrice > shippingMethod.discountThreshold) ? shippingMethod.discountedFee : shippingMethod.feePerCase;
+	const shippingCost = priceData.quantity * shippingPerCase;
+	return priceData.basePrice - priceData.discount + shippingCost;
+}
+```
+
 
 
