--- a/refactoring/07/封装.md
+++ b/refactoring/07/封装.md
@@ -687,17 +687,206 @@ class Person {
 
 5. 范例
 
+```javascript
+class TrackingInFormation {
+    get shippingCompany(){return this._shippingCompany;}
+    set shippingCompany(arg){this._shippingCompany = arg;}
+    get trackingNumber(){return this._trackingNumber;}
+    set trackingNumber(arg){this._trackingNumber = arg;}
+    get display(){return `${this.shippingCompany}: ${this.trackingNumber}`;}
+}
+class Shipment {
+    get trackingInfo(){return this._trackingInfomation.display;}
+    get trackingInformation(){return this._trackingInformation;}
+    set trackingInformation(aTrackingInformation){
+        this._trackingInformation = aTrackingInformation;
+    }
+}
+aShipment.trackingInformation.shippingCompany = request.vendor;
+```
 
+先在Shipment类里创建一个委托方法，并调整客户端代码，使其调用这个委托方法
 
+```javascript
+class Shipment {
+    set shippingCompany(arg){this._trackingInformation.shippingCompany = arg;}
+}
+aShipment.shippingCompany = request.vendor;
+```
 
+对display方法应用内联函数手法
 
+```javascript
+class Shipment {
+    get trackingInfo(){return `${this.shippingCompany}: ${this.trackingNumber}`;
+}
+```
 
+继续搬移字段，最终完全移除TrackingInformation类
 
+```javascript
+class Shipment {
+    get trackingInfo(){return `${this.shippingCompany}: ${this.trackingNumber}`;
+    get shippingCompany(){return this.shippingCompany;}
+    set shippingCompany(arg){this.shippingCompany = arg;}
+    get trackingNumber(){return this._trackingNumber;}
+    set trackingNumber(arg){this._trackingNumber = arg;}
+}
+```
 
+## 7.7 隐藏委托关系（Hide Delegate）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+manager = aPerson.department.manager;
+```
 
+重构为：
+
+```javascript
+manager = aPerson.manager;
+class Person {
+    get manager(){return this.department.manager;}
+}
+```
+
+3. 动机
+
+“封装”意味着每个模块都应该尽可能少了解系统的其它部分，如此一来，一旦发生变化，需要了解这一变化的模块就会比较少，这会使变化比较容易进行。
+
+4. 做法
+
+- 对于每个委托关系中的函数，在服务对象端建立一个简单的委托函数
+- 调整客户端，令它只调用服务对象提供的函数，每次调整后运行测试
+- 如果将来不再有任何客户端需要取用委托类，便可移除服务对象中的相关访问函数
+- 测试
+
+5. 范例
+
+```javascript
+class Person{
+    constructor(name){
+        this._name = name;
+    }
+    get name(){return this._name;}
+    get department(){return this._department;}
+    set department(arg){this._department = arg;}
+}
+class Department {
+    get chargeCode(){return this._chargeCode;}
+    set ChargeCode(arg){this._chargeCode = arg;}
+    get manager(){return this._manager;}
+    set manager(arg){this._manager = arg;}
+}
+manager = sPerson.department.manager;
+```
+
+在Person类中建立一个简单的委托函数
+
+```javascript
+class Person {
+    get manager() {return this._deparment.manager;}
+}
+manager = sPerson.manager;
+```
+
+## 7.8 移除中间人（Remove Middle Man）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+manager = aPerson.manager;
+class Person {
+    get manager(){return this.department.manager;}
+}
+```
+
+重构为：
+
+```javascript
+manager = aPerson.department.manager;
+```
+
+3. 动机
+
+随着受委托类的特性越来越多，更多的转发函数就会使人烦躁，服务类完全变成了一个中间人，此时就应该让客户端直接调用受托类。
+
+4. 做法
+
+- 为受托对象创建一个取值函数
+- 对于每个委托函数，让其客户端转为连续的访问函数调用。每次替换后运行测试
+
+5. 范例
+
+```javascript
+manager = aPerson.manager;
+class Person {
+    get manager(){return  this._department.manager;}
+}
+class Department(){
+    get manager(){return this._manager;}
+}
+```
+
+在Person类中建立一个函数
+
+```javascript
+class Person {
+    get department(){return this._department;}
+}
+manager = aPerson.department.manager;
+```
+
+然后就可以移除Person类中的manager方法了
+
+## 7.9 替换算法（Substitute Algorithm）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+function foundPerson(people){
+    for (let i =0; i<people.length; i++){
+        if (people[i] === "Don"){
+            retur "Don";
+        }
+        if (people[i] === "John"){
+            return "John";
+        }
+        if (people[i] === "Kent"){
+            return "Kent";
+        }
+    }
+    return "";
+}
+```
+
+重构为：
+
+```javascript
+function foundPerson(people){
+    const candidates = ["Don", "John", "Kent"];
+    return  people.find(p => candidates.includes(p)) || "";
+}
+```
+
+3. 动机
+
+4. 做法
+
+- 整理一下待替换的算法，保证它已经被抽取到一个独立的函数中
+- 先只为这个函数准备测试，以便固定它的行为
+- 准备好另一个算法
+- 执行静态检查
+- 运行测试，比对新旧算法的运行结果。如果测试通过，那就大功告成；否则，在后续测试和调试过程中，已旧算法为比较参照标准。
+
+5. 范例
 
 
 
