--- a/refactoring/08/搬移特性.md
+++ b/refactoring/08/搬移特性.md
@@ -436,11 +436,147 @@ class Account {
         this._number = number;
         this._type = type;
     }
-    get interestRate(){return this._tinterestRate;}
+    get interestRate(){return this._type.interestRate;}
 }
 ```
 
+## 8.3 搬移语句到函数（Move Statements into Function）
 
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+result.push(`<p>title: ${person.photo.title}</p>`);
+result.concat(photoData(person.photo));
+function photoData(aPhoto){
+    return [
+        `<p>location: ${aPhoto.location}</p>`,
+        `<p>date: ${aPhoto.date.toDateString()}</P>`,
+    ];
+}
+```
+
+重构为：
+
+```javascript
+result.concat(photoData(person.photo));
+function photoData(aPhoto){
+    return [
+        `<p>title: ${aPhoto.title}</p>`,
+        `<p>location: ${aPhoto.location}</p>`,
+        `<p>date: ${aPhoto.date.toDateString()}</P>`,
+    ];
+}
+```
+
+3. 动机
+
+要维护代码库的健康发展，需要遵守几条黄金守则，其中最重要的一条当属“消除重复”。
+
+4. 做法
+
+- 如果重复的代码段离调用目标函数的地方还有些距离，则先用移动语句将这些语句挪动到紧邻目标函数的位置
+- 如果目标函数仅被唯一一个源函数调用，那么只需要将源函数中重复代码端剪切并粘贴到目标函数中即可，然后运行测试。本做法的后续步骤至此可以忽略
+- 如果函数不止一个调用点，那么先选择其中一个调用点应用提炼函数，将待搬移的语句与目标函数一起提炼成一个新函数。给新函数取个临时的名字，只要易于搜索即可
+- 调整函数的其它调用点，令他们调用新提炼的函数，每次调整之后运行测试
+- 完成所有引用点的替换后，引用内联函数将目标函数内联到新函数里，并移除原目标函数
+- 对新函数引用函数改名，将其改名变为原目标函数的名字
+
+5. 范例
+
+```javascript
+function renderPerson(outStream, person){
+    const result = [];
+    result.push(`<p>${person.name}</p>`);
+    result.push(randerPhoto(person.photo));
+    result.push(`<p>title: ${person.photo.title}</p>`);
+    result.push(emitPhotoData(person.photo));
+    return result.join("\n");
+}
+function photoDiv(p){
+    return [
+        "<div>",
+        `<p>title: ${p.title}</p>`,
+        emitPhotoData(p),
+        "</div>",
+    ].join("\n");
+}
+function emitPhotoData(aPhoto){
+    const result = [];
+    result.push(`<p>location: ${aPhoto.location}</p>`);
+    result.push(`<p>date: ${aPhoto.date.toDateString()}</P>`);
+    return result.join("\n";)
+}
+```
+
+提炼函数，把想搬移的语句和emitPhotoData函数一起提炼到新函数：
+
+```javascript
+function photoDiv(p){
+    return [
+        "<div>",
+        zznew(p),
+        "</div>",
+    ].join("\n");
+}
+function zznew(p){
+    return [
+        `<p>title: ${p.title}</p>`
+        emitPhotoData(p),
+    ].join("\n");
+}
+```
+
+替换emitPhotoData函数的其它调用点，逐一替换
+
+```javascript
+function renderPerson(outStream, person){
+    const result = [];
+    result.push(`<p>${person.name}</p>`);
+    result.push(randerPhoto(person.photo));
+    result.push(zznew(person.photo));
+    return result.join("\n");
+}
+```
+
+将emitPhotoData函数内联到新函数中
+
+```javascript
+function zznew(p){
+    return [
+        `<p>title: ${p.title}</p>`,
+        `<p>location: ${aPhoto.location}</p>`,
+        `<p>date: ${aPhoto.date.toDateString()}</P>`,
+    ].join("\n");
+}
+```
+
+对新提炼的函数改名
+
+```javascript
+function renderPerson(outStream, person){
+    const result = [];
+    result.push(`<p>${person.name}</p>`);
+    result.push(randerPhoto(person.photo));
+    result.push(emitPhotoData(person.photo));
+    return result.join("\n");
+}
+function photoDiv(p){
+    return [
+        "<div>",
+        emitPhotoData(p),
+        "</div>",
+    ].join("\n");
+}
+function emitPhotoData(p){
+    return [
+        `<p>title: ${p.title}</p>`,
+        `<p>location: ${aPhoto.location}</p>`,
+        `<p>date: ${aPhoto.date.toDateString()}</P>`,
+    ].join("\n");
+}
+```
 
 
 
