--- a/refactoring/08/搬移特性.md
+++ b/refactoring/08/搬移特性.md
@@ -578,6 +578,188 @@ function emitPhotoData(p){
 }
 ```
 
+## 8.4 搬移语句到调用者（Move Statements to Callers）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+emitPhotoData(outStream, person.photo);
+function emitPhotoData(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>location: ${photo.location}</p>\n`);
+}
+```
+
+重构为：
+
+```javascript
+emitPhotoData(outStream, person.photo);
+outStream.write(`<p>location: ${person.photo.location}</p>\n`);
+function emitPhotoData(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);    
+}
+```
+
+3. 动机
+
+以往在多个地方共用的行为，如今需要在某些调用点面前表现出不同的行为。于是我们得把表现不同的行为从函数里挪出，并搬移到其调用处。
+
+4. 做法
+
+- 最简单的情况下，原函数非常简单，其调用这也只有寥寥一两个，此时只需要把要搬移的代码从函数里剪切出来并粘贴回调用端取即可，必要的时候做些调整。运行测试。如果测试通过，那就大功告成，本手法可到此为止
+- 若调用点不止一两个，则需要先用提炼函数将你不想搬移的代码提炼成一个新函数，函数名可以临时起一个
+- 对原函数应用内联函数
+- 对提炼出来的函数应用改变函数声明，令其与原函数使用同一个名字
+
+5. 范例
+
+```javascript
+function renderPerson(outStream, person){
+    outStream.write(`<p>${person.name}</p>\n`);
+    renderPhoto(outStream, person.photo);
+    emitPhotoData(outStream, person.photo);
+}
+function listRecentPhotos(outStream, photos){
+    photos
+        .filter(p => p.date > recentDateCutoff())
+        .forEach(p => {
+        outStream.write("<div>\n");
+        emitPhotoData(outStream, p);
+        outStream.write("</div>\n");
+    });
+}
+function emitPhotoData(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>date: ${photo.date.toDateString()}</p>\n`);
+    outStream.write(`<p>location: ${photo.location}</p>\n`);
+}
+```
+
+想要支持listRecentPhotos安徽念书可以已不同的方式渲染相片的location信息，而renderPerson的行为则保持不变
+
+先提炼函数
+
+```javascript
+function renderPerson(outStream, person){
+    outStream.write(`<p>${person.name}</p>\n`);
+    renderPhoto(outStream, person.photo);
+    emitPhotoData(outStream, person.photo);
+}
+function listRecentPhotos(outStream, photos){
+    photos
+        .filter(p => p.date > recentDateCutoff())
+        .forEach(p => {
+        outStream.write("<div>\n");
+        emitPhotoData(outStream, p);
+        outStream.write("</div>\n");
+    });
+}
+function emitPhotoData(outStream, photo){
+    zztmp(outStream, photo)
+    outStream.write(`<p>location: ${photo.location}</p>\n`);
+}
+function zztmp(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>date: ${photo.date.toDateString()}</p>\n`);
+}
+```
+
+对emitPhotoData的调用点逐一应用内联函数，首先renderPerson函数
+
+```javascript
+function renderPerson(outStream, person){
+    outStream.write(`<p>${person.name}</p>\n`);
+    renderPhoto(outStream, person.photo);
+    zztmp(outStream, person.photo);
+    outStream.write(`<p>location: ${person.photo.location}</p>\n`);
+}
+function listRecentPhotos(outStream, photos){
+    photos
+        .filter(p => p.date > recentDateCutoff())
+        .forEach(p => {
+        outStream.write("<div>\n");
+        emitPhotoData(outStream, p);
+        outStream.write("</div>\n");
+    });
+}
+function emitPhotoData(outStream, photo){
+    zztmp(outStream, photo)
+    outStream.write(`<p>location: ${photo.location}</p>\n`);
+}
+function zztmp(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>date: ${photo.date.toDateString()}</p>\n`);
+}
+```
+
+然后listRecentPhotos函数
+
+```javascript
+function renderPerson(outStream, person){
+    outStream.write(`<p>${person.name}</p>\n`);
+    renderPhoto(outStream, person.photo);
+    zztmp(outStream, person.photo);
+    outStream.write(`<p>location: ${person.photo.location}</p>\n`);
+}
+function listRecentPhotos(outStream, photos){
+    photos
+        .filter(p => p.date > recentDateCutoff())
+        .forEach(p => {
+        outStream.write("<div>\n");
+        zztmp(outStream, p);
+        outStream.write(`<p>location: ${p.location}</p>\n`);
+        outStream.write("</div>\n");
+    });
+}
+function emitPhotoData(outStream, photo){
+    zztmp(outStream, photo)
+    outStream.write(`<p>location: ${photo.location}</p>\n`);
+}
+function zztmp(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>date: ${photo.date.toDateString()}</p>\n`);
+}
+```
+
+删除emitPhotoData函数，将内联的函数zztmp改名为emitPhotoData，完成本次重构
+
+```javascript
+function renderPerson(outStream, person){
+    outStream.write(`<p>${person.name}</p>\n`);
+    renderPhoto(outStream, person.photo);
+    emitPhotoData(outStream, person.photo);
+    outStream.write(`<p>location: ${person.photo.location}</p>\n`);
+}
+function listRecentPhotos(outStream, photos){
+    photos
+        .filter(p => p.date > recentDateCutoff())
+        .forEach(p => {
+        outStream.write("<div>\n");
+        emitPhotoData(outStream, p);
+        outStream.write(`<p>location: ${p.location}</p>\n`);
+        outStream.write("</div>\n");
+    });
+}
+function emitPhotoData(outStream, photo){
+    outStream.write(`<p>title: ${photo.title}</p>\n`);
+    outStream.write(`<p>date: ${photo.date.toDateString()}</p>\n`);
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
