--- a/refactoring/08/搬移特性.md
+++ b/refactoring/08/搬移特性.md
@@ -748,6 +748,432 @@ function emitPhotoData(outStream, photo){
 }
 ```
 
+## 8.5 以函数调用取代内联代码（Replace Inline Code with Function Call）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+let appliesToMass = false;
+for(const s of states){
+    if (s === "MA") appliesToMass = true;
+}
+```
+
+重构为：
+
+```javascript
+appliesToMass = states.includes("MA");
+```
+
+3. 动机
+
+4. 做法
+
+- 将内联代码替代为对一个既有函数的调用
+- 测试
+
+5. 范例
+
+## 8.6 移动语句（Slide Statements）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+const pricingPlan = retrievePricingPlan();
+const order = retreiveOrder();
+let charge;
+const chargePerUnit = pricingPlan.unit;
+```
+
+重构为：
+
+```javascript
+const pricingPlan = retrievePricingPlan();
+const chargePerUnit = pricingPlan.unit;
+const order = retreiveOrder();
+let charge;
+```
+
+3. 动机
+
+让存在关系的东西一起出现，可以是代码更容易理解
+
+4. 做法
+
+- 确定待移动的代码片段应该被搬往何处。仔细检查待移动片段与目的地之间的语句，看看搬移后是否会影响这些代码正常工作。如果会，则放弃这项重构
+- 剪切源代码片段，粘贴到上一步选定的位置上
+- 测试
+
+5. 范例
+
+## 8.7 拆分循环（Split Loop）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+let averageAge = 0;
+let totalSalary = 0;
+for (const p of people){
+    averageAge += p.age;
+    totalSalary += p.salary;
+}
+averageAge = averageAge / people.length;
+```
+
+重构为：
+
+```javascript
+let totalSalary = 0;
+for (const p of people){
+    totalSalary += p.salary;
+}
+let averageAge = 0;
+for (const p of people){
+    averageAge += p.age;
+}
+averageAge = averageAge / people.length;
+```
+
+3. 动机
+
+4. 做法
+
+- 复制一遍循环代码
+- 识别并移除循环中的重复代码，使每个循环只做一件事
+- 测试
+
+5. 范例
+
+```javascript
+let youngest = people[0] ? people[0].age : Infinity;
+let totalSalary = 0;
+for (const p of people){
+    if (p,age < youngest)youngest = p.age;
+    totalSalary += p.salary;
+}
+return `youngestAge: ${youngest}, totalSalary: ${totalSalart}`;
+```
+
+首先复制一遍循环代码
+
+```javascript
+let youngest = people[0] ? people[0].age : Infinity;
+let totalSalary = 0;
+for (const p of people){
+    if (p,age < youngest)youngest = p.age;
+    totalSalary += p.salaryl
+}
+for (const p of people){
+    if (p,age < youngest)youngest = p.age;
+    totalSalary += p.salary;
+}
+return `youngestAge: ${youngest}, totalSalary: ${totalSalart}`;
+```
+
+删除循环中重复的计算逻辑
+
+```javascript
+let youngest = people[0] ? people[0].age : Infinity;
+let totalSalary = 0;
+for (const p of people){
+    totalSalary += p.salary;
+}
+for (const p of people){
+    if (p,age < youngest)youngest = p.age;
+}
+return `youngestAge: ${youngest}, totalSalary: ${totalSalart}`;
+```
+
+调整代码顺序
+
+```javascript
+let totalSalary = 0;
+for (const p of people){
+    totalSalary += p.salary;
+}
+let youngest = people[0] ? people[0].age : Infinity;
+for (const p of people){
+    if (p,age < youngest)youngest = p.age;
+}
+return `youngestAge: ${youngest}, totalSalary: ${totalSalart}`;
+```
+
+然后提炼函数
+
+```javascript
+return `youngestAge: ${youngestAge()}, totalSalary: ${totalSalary()}`;
+function totalSalary(){
+    let totalSalary = 0;
+	for (const p of people){
+    	totalSalary += p.salary;
+	}
+}
+function youngestAge(){
+    let youngest = people[0] ? people[0].age : Infinity;
+	for (const p of people){
+    	if (p,age < youngest)youngest = p.age;
+	}
+}
+```
+
+totalSalary使用管道取代循环，youngestAge用替换算法
+
+```javascript
+return `youngestAge: ${youngestAge()}, totalSalary: ${totalSalary()}`;
+function totalSalary(){
+    return people.reduce((total, p) => total + p.salary, 0);
+}
+function youngestAge(){
+    return Math.min(...people.map(p => p.age));
+}
+```
+
+## 8.8 以管道取代循环（Replace Loop With Pipeline)
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+const names = [];
+for (const i of input){
+    if (i.job === "programmer")
+        names.push(i.name);
+}
+```
+
+重构为：
+
+```javascript
+const names = input.filter(i => i.job === "programmer").map(i => i.name);
+```
+
+3. 动机
+
+4. 做法
+
+- 创建一个新变量，用以存放参与循环过程的集合
+- 从循环顶部开始，将循环里的每一块行为依次搬移出来，在上一步创建的集合变量上用一种管道运算替代之。每次修改后运行测试
+- 搬移完循环里的全部行为后，将循环整个删除
+
+5. 范例
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    let firestLine = true;
+    const result = [];
+    for (const line of lines){
+        if (firestLine){
+            fireatLine = false;
+            continue;
+        }
+        if (line.trim() === "") continue;
+        const record = line.split(",");
+        if (record[1].trim() === "India"){
+            result.push({city: revord[0].trim(), phone: record[2].trim()});
+        }
+    }
+    return result;
+}
+```
+
+创建一个独立变量，用来存放参与循环过程的集合值
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    let firestLine = true;
+    const result = [];
+    const loopItems = lines;
+    for (const line of loopItems){
+        if (firestLine){
+            fireatLine = false;
+            continue;
+        }
+        if (line.trim() === "") continue;
+        const record = line.split(",");
+        if (record[1].trim() === "India"){
+            result.push({city: revord[0].trim(), phone: record[2].trim()});
+        }
+    }
+    return result;
+}
+```
+
+将循环的第一部分先从循环移除，并在集合变量声明后便新增一个对应的slice运算来代替
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const loopItems = lines
+    					.slice(1);
+    for (const line of loopItems){
+        if (line.trim() === "") continue;
+        const record = line.split(",");
+        if (record[1].trim() === "India"){
+            result.push({city: revord[0].trim(), phone: record[2].trim()});
+        }
+    }
+    return result;
+}
+```
+
+使用filter来代替移除数据空行的行为
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const loopItems = lines
+    					.slice(1)
+    					.filter(line => line.trim() !== "")
+    					;
+    for (const line of loopItems){
+        const record = line.split(",");
+        if (record[1].trim() === "India"){
+            result.push({city: revord[0].trim(), phone: record[2].trim()});
+        }
+    }
+    return result;
+}
+```
+
+使用map运算代替将数据的一行转换成数组的运算
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const loopItems = lines
+    					.slice(1)
+    					.filter(line => line.trim() !== "")
+    					.map(line => line.split(","))
+    					;
+    for (const line of loopItems){
+        const record = line.split(",");
+        if (record[1].trim() === "India"){
+            result.push({city: revord[0].trim(), phone: record[2].trim()});
+        }
+    }
+    return result;
+}
+```
+
+然后又增加一个filter操作
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const loopItems = lines
+    					.slice(1)
+    					.filter(line => line.trim() !== "")
+    					.map(line => line.split(","))
+    					.filter(record => record[1].trim() === "India")
+    					;
+    for (const line of loopItems){
+        const record = line.split(",");
+        result.push({city: revord[0].trim(), phone: record[2].trim()});
+    }
+    return result;
+}
+```
+
+然后把结果映射成需要的记录格式
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const loopItems = lines
+    					.slice(1)
+    					.filter(line => line.trim() !== "")
+    					.map(line => line.split(","))
+    					.filter(record => record[1].trim() === "India")
+    					.map(record => ({city: revord[0].trim(), phone: record[2].trim()}))
+    					;
+    for (const line of loopItems){
+        const record = line.split(",");
+        result.push(line);
+    }
+    return result;
+}
+```
+
+删除整个循环
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    const result = [];
+    const result = lines
+    					.slice(1)
+    					.filter(line => line.trim() !== "")
+    					.map(line => line.split(","))
+    					.filter(record => record[1].trim() === "India")
+    					.map(record => ({city: revord[0].trim(), phone: record[2].trim()}))
+    					;
+    return result;
+}
+```
+
+最后清理代码
+
+```javascript
+function acquireData(input){
+    const lines = input.split("\n");
+    return lines
+			.slice(1)
+    		.filter(line => line.trim() !== "")
+    		.map(line => line.split(","))
+    		.filter(fields => fields[1].trim() === "India")
+    		.map(fields => ({city: fields[0].trim(), phone: fields[2].trim()}))
+    					;
+}
+```
+
+## 8.9 移除死代码（Remove Dead Code）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+if(false) {
+	doSomethingThatUsedToMatter();
+}
+```
+
+删除
+
+3. 动机
+
+4. 做法
+
+- 如果死代码可以从外部直接引用，比如它是一个独立的函数时，先查找一下还有无调用点
+- 将死代码移除
+- 测试
+
+5. 范例
+
+
+
+
+
+
+
+
+
+
+
 
 
 
