--- a/refactoring/09/重新组织数据.md
+++ b/refactoring/09/重新组织数据.md
@@ -115,6 +115,136 @@ function discount(inputValue, quantity){
 }
 ```
 
+## 9.2 字段改名（Rename Field）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+class Organization {
+    get name(){...}
+}
+```
+
+重构为：
+
+```javascript
+class Organization {
+    get title(){...}
+}
+```
+
+3. 动机
+
+命名很重要，对于程序中广泛使用的记录结构，其中字段的命名格外重要。
+
+4. 做法
+
+- 如果记录的作用域较小，可以直接修改所有该字段的代码，然后测试。后面的步骤都不需要了
+- 如果记录还未封装，请先使用封装记录
+- 在对象内部对私有字段改名，对应调整内部访问该字段的函数
+- 测试
+- 如果构造函数的参数用了旧的字段名，运用改变函数声明将其改名
+- 运用函数改名给访问函数改名
+
+5. 范例
+
+```javascript
+const organization = {name: "Acme Gooseberries", country: "GB"};
+```
+
+首先用封装记录吧这个记录封装起来
+
+```javascript
+class Organization {
+    constructor(data){
+        this._name = data.name;
+        this._country = data.country;
+    }
+    get name(){return this._name;}
+    set name(aString){this._name = aString;}
+    get country(){return this._country;}
+    set country(aCountryCode){this._country = aCountryCode;}
+}
+const organization = new Organization({name: "Acme Gooseberries", country: "GB"});
+```
+
+修改字段名
+
+```javascript
+class Organization {
+    constructor(data){
+        this._title = data.name;
+        this._country = data.country;
+    }
+    get name(){return this._title;}
+    set name(aString){this._title = aString;}
+    get country(){return this._country;}
+    set country(aCountryCode){this._country = aCountryCode;}
+}
+```
+
+在构造函数中使用title字段
+
+```javascript
+class Organization {
+    constructor(data){
+        this._title = (data.title !== undefined) ? data.title : data.name;
+        this._country = data.country;
+    }
+    get name(){return this._title;}
+    set name(aString){this._title = aString;}
+    get country(){return this._country;}
+    set country(aCountryCode){this._country = aCountryCode;}
+}
+const organization = new Organization({title: "Acme Gooseberries", country: "GB"});
+```
+
+在构造函数中去掉name，只使用title
+
+```javascript
+class Organization {
+    constructor(data){
+        this._title = data.title;
+        this._country = data.country;
+    }
+    get name(){return this._title;}
+    set name(aString){this._title = aString;}
+    get country(){return this._country;}
+    set country(aCountryCode){this._country = aCountryCode;}
+}
+```
+
+访问函数改名
+
+```javascript
+class Organization {
+    constructor(data){
+        this._title = data.title;
+        this._country = data.country;
+    }
+    get title(){return this._title;}
+    set title(aString){this._title = aString;}
+    get country(){return this._country;}
+    set country(aCountryCode){this._country = aCountryCode;}
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
