--- a/refactoring/09/重新组织数据.md
+++ b/refactoring/09/重新组织数据.md
@@ -231,6 +231,142 @@ class Organization {
 }
 ```
 
+## 9.3 以查询取代派生变量（Replace Derived Variable with Query）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+get discountedTotal(){return this._discountedTotal;}
+set discount(aNumber){
+    const old = this._discount;
+    this._discount = aNumber;
+    this._discountedTotal += old = aNumber;
+}
+```
+
+重构为：
+
+```javascript
+get discountedTotal(){return this._baseTotal - this._discount;}
+set discount(aNumber){this._discount = aNumber;}
+```
+
+3. 动机
+
+尽量把可变数据的作用域限制在最小的范围
+
+4. 做法
+
+- 识别处所有对变量做更新的地方。如有必要，用拆分变量分割各个更新点
+- 新建一个函数，用于计算该变量的值
+- 用引入断言断言该变量和计算函数始终给出同样的值
+- 测试
+- 修改读取该变量的代码，令其调用新建的函数
+- 测试
+- 用移除死代码去掉变量的声明和赋值
+
+5. 范例
+
+- 范例一：
+
+```javascript
+class ProductionPlan {
+    get production(){return this._production;}
+    applyAdjustment(anAdjustment){
+        this._adjustments.push(anAdjustment);
+        this._production += anAdjustment.amount;
+    }
+}
+```
+
+引入断言
+
+```javascript
+class ProductionPlan {
+    get production(){
+        assert(this._production === this.calculateProduction);
+        return this._production;
+    }
+    get calculateProduction(){
+        return this._adjustments.reduce((sum, 0) => sum + a.amount, 0);
+    }
+    applyAdjustment(anAdjustment){
+        this._adjustments.push(anAdjustment);
+        this._production += anAdjustment.amount;
+    }
+}
+```
+
+测试没问题之后可以删除断言，然后使用内联函数，把计算逻辑内联到production函数内
+
+```javascript
+get production(){
+    return this._adjustments.reduce((sum, a) => sum + a.amount, 0);
+}
+```
+
+然后清除使用旧 变量的地方
+
+```javascript
+applyAdjustment(anAdjustment){
+        this._adjustments.push(anAdjustment);
+}
+```
+
+- 范例二：不止一个数据来源
+
+```javascript
+class ProductionPlan {
+    constructor(production)}{
+        this._production = production;
+        this._adjustments = [];
+    }
+    get production(){return this._production;}
+    applyAdjustment(anAdjustment){
+        this._adjustments.push(anAdjustment);
+        this._production += anAdjustment.amount;
+    }
+}
+```
+
+首先拆分变量
+
+```javascript
+class ProductionPlan {
+    constructor(production)}{
+        this._initialProduction = production;
+        this._productionAccumulator = 0;
+        this._adjustments = [];
+    }
+    get production(){
+        return this._initialProduction + this._productionAccumulator;
+    }
+}
+```
+
+然后引入断言
+
+```javascript
+class ProductionPlan {
+    constructor(production)}{
+        this._initialProduction = production;
+        this._productionAccumulator = 0;
+        this._adjustments = [];
+    }
+    get production(){
+         assert(this._productionAccumulator === this.calculatedProductionAccumulator);
+        return this._initialProduction + this._productionAccumulator;
+    }
+	get calculatedProductionAccumulator(){
+    	return this._adjustments.reduce((sum, a) => sum + amount, 0);
+	}
+}
+```
+
+后面和范例一一样
+
 
 
 
