--- a/refactoring/09/重新组织数据.md
+++ b/refactoring/09/重新组织数据.md
@@ -367,9 +367,104 @@ class ProductionPlan {
 
 后面和范例一一样
 
+## 9.4 将引用对象改为值对象（Change Reference to Value）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Product {
+    applyDiscount(arg){this._price.amount = arg;}
+}
+```
+
+重构为：
+
+```javascript
+class Product {
+    applyDiscount(arg){
+        this._price = new Money(this._price.amount - arg, this._price.currency);
+    }
+}
+```
+
+3. 动机
+
+4. 做法
+
+- 检查重构目标是否为不可变对象，或者是否可修改为不可变对象
+- 用移除设值函数逐一去掉所有设值函数
+- 提供一个基于值的相等性判断函数，在其中使用值对象的字段
+
+5. 范例
+
+```javascript
+class Person {
+    constructor(){
+        this._telephoneNumber = new TelephoneNumber();
+    }
+    get officeAreaCode(){return this._telephoneNumber.areaCode;}
+    set officeAreaCode(arg){this._telephoneNumber.areaCode = arg;}
+    get officeNumber(){return this._telephoneNumber.number;}
+    set officeNumber(arg){this._telephoneNumber.number = arg;}
+}
+class TelephoneNumber {
+    get areaCode(){return this._areaCode;}
+    set areaCode(arg){this._areaCode = arg;}
+    get number(){return this._number;}
+    set number(arg){this._number = arg;}
+}
+```
+
+把TelephoneNumber类变成不可改变的，改变函数声明把这两个字段的初始值加到构造函数中
+
+```javascript
+class TelephoneNumber {
+    constructor(areaCode, number){
+        this._areaCode = areaCode;
+        this._number = number;
+    }
+    get areaCode(){return this._areaCode;}
+    set areaCode(arg){this._areaCode = arg;}
+    get number(){return this._number;}
+    set number(arg){this._number = arg;}
+}
+```
+
+然后将调用者改为重新赋值整个对象
+
+```javascript
+class Person {
+    constructor(){
+        this._telephoneNumber = new TelephoneNumber();
+    }
+    get officeAreaCode(){return this._telephoneNumber.areaCode;}
+    set officeAreaCode(arg){
+        this._telephoneNumber = new TelephoneNumber(arg, this.officeNumber);
+    }
+    get officeNumber(){return this._telephoneNumber.number;}
+    set officeNumber(arg){this._telephoneNumber.number = arg;}
+}
+```
+
+其它字段重复以上步骤
+
+```javascript
+class Person {
+    constructor(){
+        this._telephoneNumber = new TelephoneNumber();
+    }
+    get officeAreaCode(){return this._telephoneNumber.areaCode;}
+    set officeAreaCode(arg){
+        this._telephoneNumber = new TelephoneNumber(arg, this.officeNumber);
+    }
+    get officeNumber(){return this._telephoneNumber.number;}
+    set officeNumber(arg){
+        this._telephoneNumber = new TelephoneNumber(this.officeareaCode, arg);
+    }
+}
+```
 
 
 
