--- a/refactoring/09/重新组织数据.md
+++ b/refactoring/09/重新组织数据.md
@@ -391,6 +391,8 @@ class Product {
 
 3. 动机
 
+不可变数据结构处理起来更容易，可以放心的把不可变的数据值传递给程序的其它部分，而不必担心对象中包装的数据被偷偷修改。
+
 4. 做法
 
 - 检查重构目标是否为不可变对象，或者是否可修改为不可变对象
@@ -466,21 +468,76 @@ class Person {
 }
 ```
 
+## 9.5 将值对象改为引用对象（Change Value to Reference）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+let customer = new Customer(customerData);
+```
 
+重构为：
 
+```javascript
+let customer = customerRepostitory.get(customerData.id);
+```
 
+3. 动机
 
+如果共享数据需要更新，将其复制多分的做法就会遇到巨大的困难。此时必须找到所有的副本，更新所有的对象，只要漏掉一个副本没有更新。就会遇到数据不一致麻烦。这种情况下，可以考虑将多份数据副本变成单一的引用。
 
+4. 做法
 
+- 为相关对象创建一个仓库（如果没有这样一个仓库的话）
+- 确保构造函数有办法找到关联对象的正确实例
+- 修改宿主函数的构造函数，令其从仓库中获取关联对象。每次修改后执行测试
 
+5. 范例
 
+```javascript
+class Order {
+    constructor(data){
+        this._number = data.number;
+        this._customer = new Customer(data.customer);
+    }
+    get customer(){return this._customer;}
+}
+class Customer {
+    constructor(id){
+        this._id = id;
+    }
+    get id(){return this._id;}
+}
+```
 
+创建一个仓库对象
 
+```javascript
+let _repostoryData;
+export function initialize(){
+    _repostoryData = {};
+    _repostoryData.customers = new Map();
+}
+export function registerCustomer(id){
+    if (! _repostoryData.customers.has(id))
+        _repostoryData.customers.set(id, new Customer(id));
+    return findCustomer(id);
+}
+export function findCustomer(id){
+    return _repostoryData.customers.get(id);
+}
+```
 
+修改Order
 
-
-
-
+```javascript
+class Order {
+    constructor(data){
+        this._number = data.number;
+        this._customer = registerCustomer(data.customer);
+    }
+    get customer(){return this._customer;}
+}
+```
