--- a/refactoring/10/简化条件逻辑.md
+++ b/refactoring/10/简化条件逻辑.md
@@ -97,7 +97,93 @@ function regularCharge(){
 }
 ```
 
+## 10.2 合并条件表达式（Consolidate Conditional Expression)
 
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+if (anEmployee.seniority < 2) return 0;
+if (anEmployee.monthsDisabled > 12) return 0;
+if (anEmployee.isPartTime) return 0;
+```
+
+重构为：
+
+```javascript
+if (isNotEligibleForDisability()) return 0;
+function isNotEligibleForDisability(){
+    return ((anEmployee.seniority < 2)
+    	|| (anEmployee.monthsDisabled > 12)
+    	|| (anEmployee.isPartTime));
+}
+```
+
+3. 动机
+
+当检查条件各不相同，最终行为却一致，可以使用“逻辑或”和“逻辑与”将它们合并为一个条件表达式。
+
+4. 做法
+
+- 确定这些条件表达式都没有副作用
+- 使用适当的逻辑运算符，将两个相关条件表达式合并为一个
+- 测试
+- 重复前面的合并过程，直到所有相关的条件表达式都合并到一起
+- 可以考虑对合并后的语句表达式实施提炼函数
+
+5. 范例
+
+- 范例一：
+
+```javascript
+function disabilityAmount(anEmployee){
+    if (anEmployee.seniority < 2) return 0;
+	if (anEmployee.monthsDisabled > 12) return 0;
+	if (anEmployee.isPartTime) return 0;
+}
+```
+
+将条件表达式进行合并
+
+```javascript
+function disabilityAmount(anEmployee){
+    if ((anEmployee.seniority < 2)
+        || (anEmployee.monthsDisabled > 12)
+        || (anEmployee.isPartTime)) return 0;
+}
+```
+
+对条件表达式使用提炼函数
+
+```javascript
+function disabilityAmount(anEmployee){
+	if (isNotEligibleForDisability()) return 0;
+
+	function isNotEligibleForDisability(){
+    	return ((anEmployee.seniority < 2)
+    		|| (anEmployee.monthsDisabled > 12)
+    		|| (anEmployee.isPartTime));
+	}
+}
+```
+
+- 范例二：使用逻辑与
+
+```javascript
+if (anEmployee.onVacation)
+    if (anEmployee.seniority > 10)
+        return 1;
+return 0.5;
+```
+
+使用逻辑与运算符将其合并
+
+```javascript
+if ((anEmployee.onVacation)
+   && (anEmployee.seniority > 10)) return 1;
+return 0.5;
+```
 
 
 
