--- a/refactoring/10/简化条件逻辑.md
+++ b/refactoring/10/简化条件逻辑.md
@@ -185,15 +185,197 @@ if ((anEmployee.onVacation)
 return 0.5;
 ```
 
+## 10.3 以卫语句取代嵌套条件表达式（Replace Nested Conditional with Guard Clauses)
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+function getPayAmount(){
+    let result;
+    if (isDead)
+        result = deadAmount();
+    else {
+        if (isSeparated)
+            result = separatedAmount();
+        else {
+            if (isRetired)
+                result = retiredAmount();
+            else
+                result = normalPayAmount();
+        }
+    }
+    return result;
+}
+```
 
+重构为：
 
+```javascript
+function getPayAmount(){
+    if (isDead) return deadAmount();
+    if (isSeparated) return separatedAmount();
+    if (isRetired) return retiredAmount();
+    return normalPayAmount();
+}
+```
 
+3. 动机
 
+4. 做法
 
+- 选中最外层需要被替换的条件逻辑，将其替换为卫语句
+- 测试
+- 有需要的华，重复上述步骤
+- 如果使用卫语句都引发同样的结果，可以使用合并表达式合并之
 
+5. 范例
+
+- 范例一：
+
+```javascript
+function payAmount(employee){
+    let result;
+    if (employee.isSeparated){
+		result = {amount: 0, reasonCode: "SEP"};   
+    }
+    else {
+        if (employee.isRetired){
+            result = {amount: 0, reasonCode: "RET"};
+        }
+        else {
+            lorem.ipsum(dolor.sitAmet);
+            consectetur(adipiscing).elit();
+            sed.do.eiusmod = tempor.incididunt.ut(labore) && dolore(magna.aliqua);
+            result = someFinalComputation();
+        }
+    }
+    return result;
+}
+```
+
+先处理最顶上的条件逻辑
+
+```javascript
+function payAmount(employee){
+    let result;
+    if (employee.isSeparated) return {amount: 0, reasonCode: "SEP"};   
+    if (employee.isRetired){
+    	result = {amount: 0, reasonCode: "RET"};
+    }
+    else {
+        lorem.ipsum(dolor.sitAmet);
+        consectetur(adipiscing).elit();
+        sed.do.eiusmod = tempor.incididunt.ut(labore) && dolore(magna.aliqua);
+        result = someFinalComputation();
+    }
+    return result;
+}
+```
+
+执行下一层
+
+```javascript
+function payAmount(employee){
+    let result;
+    if (employee.isSeparated) return {amount: 0, reasonCode: "SEP"};   
+    if (employee.isRetired) return {amount: 0, reasonCode: "RET"};
+    lorem.ipsum(dolor.sitAmet);
+    consectetur(adipiscing).elit();
+    sed.do.eiusmod = tempor.incididunt.ut(labore) && dolore(magna.aliqua);
+    result = someFinalComputation();
+    return result;
+}
+```
+
+删除result变量
+
+```javascript
+function payAmount(employee){
+    if (employee.isSeparated) return {amount: 0, reasonCode: "SEP"};   
+    if (employee.isRetired) return {amount: 0, reasonCode: "RET"};
+    lorem.ipsum(dolor.sitAmet);
+    consectetur(adipiscing).elit();
+    sed.do.eiusmod = tempor.incididunt.ut(labore) && dolore(magna.aliqua);
+    return someFinalComputation();
+}
+```
+
+范例二：将条件反转
+
+```javascript
+function adjustedCapital(anInstrument){
+    let result = 0;
+    if (anInstrument.capital > 0){
+        if (anInstrument.insterestRate > 0 && anInstrument.duration > 0){
+            result = (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+        }
+    }
+    retuen result;
+}
+```
+
+逐一替换，不过在插入卫语句时将相应条件反转过来
+
+```javascript
+function adjustedCapital(anInstrument){
+    let result = 0;
+    if (anInstrument.capital <= 0) return result;
+    if (anInstrument.insterestRate > 0 && anInstrument.duration > 0){
+		result = (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+    }
+    retuen result;
+}
+```
+
+第二个条件语句比较复杂，分两步进行反转，先加入一个逻辑非操作
+
+```javascript
+function adjustedCapital(anInstrument){
+    let result = 0;
+    if (anInstrument.capital <= 0) return result;
+    if (!(anInstrument.insterestRate > 0 && anInstrument.duration > 0)) return result;
+	result = (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+    retuen result;
+}
+```
+
+将逻辑非操作进行简化
+
+```javascript
+function adjustedCapital(anInstrument){
+    let result = 0;
+    if (anInstrument.capital <= 0) return result;
+    if (anInstrument.insterestRate <= 0 || anInstrument.duration <= 0)) return result;
+	result = (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+    retuen result;
+}
+```
+
+两个条件的结果一样，可以进行合并
+
+```javascript
+function adjustedCapital(anInstrument){
+    let result = 0;
+    if (anInstrument.capital <= 0
+        || (anInstrument.insterestRate <= 0 
+        || anInstrument.duration <= 0) return result;
+	result = (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+    retuen result;
+}
+```
+
+移除result变量
+
+```javascript
+function adjustedCapital(anInstrument){
+    if (anInstrument.capital <= 0
+        || (anInstrument.insterestRate <= 0 
+        || anInstrument.duration <= 0) return 0;
+	return (anInstrument.income / anInstrument.duration) * anInstrument.adjustmentFactor;
+}
+```
 
 
 
